# semaphoreui-test

./: .gitignore  Justfile  README.md  ansible.cfg  pyproject.toml  requirements.txt  requirements.yml
.claude/skills/defaults/: UPGRADE.md
.claude/skills/defaults/upgrade/: SKILL.md
.claude/skills/test/: HOSTNAME.md  PACKAGES.md  SKILL.md  TROUBLESHOOTING.md  UPGRADE.md
ansible/: requirements.yml
ansible/inventories/: localhost.ini  test.yml
ansible/inventories/group_vars/: all.yml
ansible/inventories/group_vars/testnet/: test.yml
ansible/playbooks/: hostname.yml  upgrade.yml
ansible/roles/testing/defaults/: main.yml
ansible/roles/testing/tasks/: main.yml
ansible/roles/upgrade/tasks/: main.yml
collections/: requirements.yml
hack/: Brewfile
inventories/group_vars/mainnet/: solana.yml
inventories/group_vars/testnet/: solana.yml
inventories/host_vars/: sol-mn-val-ams.yml  sol-mn-val-eri.yml  sol-mn-val-nj.yml  sol-mn-val-rbx.yml  sol-tn-val-ams.yml  sol-tn-val-rbx.yml  testbed-ca.yml
inventory/: solana.ini  solana.yml
inventory/group_vars/: all.yml
inventory/group_vars/mainnet/: solana.yml
inventory/group_vars/testnet/: solana.yml
inventory/host_vars/: sol-mn-val-fl.yml  sol-mn-val-nj.yml  sol-mn-val-ny.yml  sol-mn-vn-1.yml  sol-tn-vn-1.yml
playbooks/: hostname.yml  testing.yml  transition.yml  upgrade.yml
roles/hostname/tasks/: main.yml
roles/testing/defaults/: main.yml
roles/testing/tasks/: main.yml
