[project]
name = "ansible-blockchain-collection"
version = "0.1.0"
description = "Ansible collection for managing blockchain infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ansible>=11.1.0",
  "fastapi[standard]>=0.115.12",
  "havc>=1.4.0",
  "httpx>=0.28.1",
  "hvac>=2.3.0",
  "jmespath>=1.0.1",
  "netaddr>=1.3.0",
  "prometheus-client>=0.22.0",
  "requests>=2.32.3",
  "structlog>=25.3.0",
  "types-requests>=2.32.0.20241016",
]

[tool.basedpyright]
typeCheckingMode = "standard"
exclude = [
  ".direnv",
  ".devenv",
  ".git",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "ansible_collections",
  "roles/*.*/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "PL", "RUF"]
ignore = ["E501", "PLR2004"]
exclude = [
  ".direnv",
  ".devenv",
  ".git",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "ansible_collections",
  "roles/*.*/**",
]
