[project]
name = "chain-ops"
version = "0.1.0"
description = "Tools for managing Blockchain nodes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ansible>=11.1.0",
  "fastapi[standard]>=0.121.2",
  "havc>=1.4.0",
  "httpx>=0.28.1",
  "hvac>=2.3.0",
  "jmespath>=1.0.1",
  "netaddr>=1.3.0",
  "passlib>=1.7.4",
  "prometheus-client>=0.22.0",
  "requests>=2.32.3",
  "structlog>=25.3.0",
  "types-requests>=2.32.0.20241016",
]

[dependency-groups]
dev = [
  "basedpyright>=1.33.0",
  "mdformat>=1.0.0",
  "mdformat-gfm-alerts>=2.0.0",
  "mdformat-mkdocs>=4.4.2",
  "python-lsp-server[all]>=1.13.1",
  "ruff>=0.14.5",
]

[tool.ruff]
line-length    = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "PL", "RUF"]
ignore = ["E501", "PLR2004"]
exclude = [
  ".direnv",
  ".devenv",
  ".git",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "ansible_collections",
  "roles/*.*/**",
]

[tool.ruff.format]
line-ending = "lf"

[tool.basedpyright]
typeCheckingMode = "standard"
exclude = [
  ".cursor",
  ".git",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "ansible_collections",
  "ansible/roles/*.*/**",
]
